@@ -23,13 +23,9 @@
   my $theme='darker';
   my $themeColor='212121';
   my $mobile=0;
-  my $icon="icon";
   my $iOS=index($ua, 'iPad') != -1 || index($ua, 'iPhone') != -1 || index($ua, 'SafariViewService') != -1 || index($ua, 'MobileSafari') != -1 || (index($ua, 'Macintosh') != -1 && index($ua, '(KHTML, like Gecko) Version') != -1);
   # Keep in sync with store.js (defaultTheme)
-  if (index($ua, 'Android') != -1) {
-   $mobile=1;
-  } elsif ($iOS) {
-   $icon="icon-ios";
+  if (index($ua, 'Android') != -1 || $iOS) {
    $mobile=1;
   } elsif (index($ua, 'Linux') != -1) {
     if (index($query, 'desktop=KDE')!=-1) {
@@ -81,8 +77,8 @@
   print("  <meta name=\"theme-color\" content=\"#${themeColor}\">\n");
   print("  <link href=\"/material/customcss/mobile\" rel=\"stylesheet\" id=\"customcss\">\n");
   print("  <link href=\"/material/material.webmanifest?themeColor=${themeColor}\" rel=\"manifest\">\n");
-  print("  <link href=\"html/images/${icon}.png\" rel=\"icon shortcut\" sizes=\"128x128\">\n");
-  print("  <link href=\"html/images/${icon}.png\" rel=\"apple-touch-icon\" sizes=\"128x128\">\n");
+  print("  <link href=\"html/images/icon.png\" rel=\"icon shortcut\" sizes=\"128x128\">\n");
+  print("  <link href=\"html/images/icon.png\" rel=\"apple-touch-icon\" sizes=\"128x128\">\n");
   print("  <meta name=\"mobile-web-app-capable\" content=\"yes\">\n");
   print("  <meta name=\"apple-mobile-web-app-capable\" content=\"yes\">\n");
   print("  <meta name=\"apple-mobile-web-app-status-bar-style\" content=\"black\">\n");
